generated/checkers/gen/AllGen-Double-Free-e8c276d4dc0e19ee48385f74426aebc855b49aaf/build_logs/syntax-repair-00/build_stderr_1.log
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp: In member function ‘const clang::ento::MemRegion* {anonymous}::SAGenTestChecker::getRootAlias(clang::ento::ProgramStateRef, const clang::ento::MemRegion*) const’:
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp:114:52: error: cannot convert ‘clang::ento::ProgramStatePartialTrait<llvm::ImmutableMap<const clang::ento::MemRegion*, const clang::ento::MemRegion*> >::lookup_type’ {aka ‘const clang::ento::MemRegion* const*’} to ‘const clang::ento::MemRegion*’ in initialization
  114 |     const MemRegion *Next = State->get<PtrAliasMap>(Cur);
      |                             ~~~~~~~~~~~~~~~~~~~~~~~^~~~~
      |                                                    |
      |                                                    clang::ento::ProgramStatePartialTrait<llvm::ImmutableMap<const clang::ento::MemRegion*, const clang::ento::MemRegion*> >::lookup_type {aka const clang::ento::MemRegion* const*}
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp: At global scope:
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp:147:17: warning: ‘clang::ento::ProgramStateRef {anonymous}::SAGenTestChecker::setResState(clang::ento::ProgramStateRef, const clang::ento::MemRegion*, unsigned int) const’ defined but not used [-Wunused-function]
  147 | ProgramStateRef SAGenTestChecker::setResState(ProgramStateRef State,
      |                 ^~~~~~~~~~~~~~~~
make[3]: *** [tools/clang/lib/Analysis/plugins/SAGenTestHandling/CMakeFiles/SAGenTestPlugin.dir/build.make:76: tools/clang/lib/Analysis/plugins/SAGenTestHandling/CMakeFiles/SAGenTestPlugin.dir/SAGenTestChecker.cpp.o] Error 1
make[2]: *** [CMakeFiles/Makefile2:31101: tools/clang/lib/Analysis/plugins/SAGenTestHandling/CMakeFiles/SAGenTestPlugin.dir/all] Error 2
make[1]: *** [CMakeFiles/Makefile2:31108: tools/clang/lib/Analysis/plugins/SAGenTestHandling/CMakeFiles/SAGenTestPlugin.dir/rule] Error 2
make: *** [Makefile:7495: SAGenTestPlugin] Error 2
